updated index page updated profile page updated quests-list page updated access rights logic in some controllers